--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body,
+html {
+	@apply bg-seasalt;
+}
+
 * {
 	font-family: 'Poppins', sans-serif;
 }
