--- a/src/app.scss
+++ b/src/app.scss
@@ -10,3 +10,12 @@ html {
 * {
 	font-family: 'Poppins', sans-serif;
 }
+
+.section-light {
+	@apply flex justify-center bg-seasalt px-6 py-12 md:py-20;
+}
+
+.section-night {
+	@apply flex w-full justify-center bg-night px-6 py-20;
+	clip-path: polygon(0% 0%, 100% 2rem, 100% calc(100% - 2rem), 0% 100%);
+}
