--- a/src/app.scss
+++ b/src/app.scss
@@ -12,11 +12,11 @@ html {
 }
 
 .section-light {
-	@apply bg-seasalt flex justify-center px-6 py-12 md:py-20;
+	@apply flex justify-center px-6 py-12 md:py-20;
 }
 
 .section-night {
-	background-image: url('$lib/images/grain.png');
-	@apply bg-night flex w-full justify-center px-6 py-20;
+	@apply bg-grain;
+	@apply flex w-full justify-center bg-night px-6 py-20;
 	clip-path: polygon(0% 0%, 100% 2rem, 100% calc(100% - 2rem), 0% 100%);
 }
